add create habit functionality
