# server/api-spec.json
@@ -14,6 +14,13 @@
                "category": {
                   "anyOf": [{ "type": "string" }, { "type": "null" }]
                },
+               "created": { "type": "string", "format": "date" },
+               "lastUpdated": {
+                  "anyOf": [
+                     { "type": "string", "format": "date" },
+                     { "type": "null" }
+                  ]
+               },
                "trackingStartDate": { "type": "string", "format": "date" },
                "repeatDays": {
                   "type": "array",
@@ -39,6 +46,8 @@
                "name",
                "repeatDays",
                "trackingStartDate",
+               "created",
+               "lastUpdated",
                "description",
                "category"
             ]
@@ -131,6 +140,16 @@
                                        { "type": "null" }
                                     ]
                                  },
+                                 "created": {
+                                    "type": "string",
+                                    "format": "date"
+                                 },
+                                 "lastUpdated": {
+                                    "anyOf": [
+                                       { "type": "string", "format": "date" },
+                                       { "type": "null" }
+                                    ]
+                                 },
                                  "trackingStartDate": {
                                     "type": "string",
                                     "format": "date"
@@ -159,6 +178,8 @@
                                  "name",
                                  "repeatDays",
                                  "trackingStartDate",
+                                 "created",
+                                 "lastUpdated",
                                  "description",
                                  "category"
                               ]
@@ -220,7 +241,73 @@
                },
                "required": true
             },
-            "responses": { "200": { "description": "Default Response" } }
+            "responses": {
+               "200": {
+                  "description": "Default Response",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "type": "object",
+                           "properties": {
+                              "id": { "type": "integer" },
+                              "name": { "type": "string" },
+                              "description": {
+                                 "anyOf": [
+                                    { "type": "string" },
+                                    { "type": "null" }
+                                 ]
+                              },
+                              "category": {
+                                 "anyOf": [
+                                    { "type": "string" },
+                                    { "type": "null" }
+                                 ]
+                              },
+                              "created": { "type": "string", "format": "date" },
+                              "lastUpdated": {
+                                 "anyOf": [
+                                    { "type": "string", "format": "date" },
+                                    { "type": "null" }
+                                 ]
+                              },
+                              "trackingStartDate": {
+                                 "type": "string",
+                                 "format": "date"
+                              },
+                              "repeatDays": {
+                                 "type": "array",
+                                 "minItems": 1,
+                                 "maxItems": 7,
+                                 "items": {
+                                    "type": "string",
+                                    "enum": [
+                                       "monday",
+                                       "tuesday",
+                                       "wednesday",
+                                       "thursday",
+                                       "friday",
+                                       "saturday",
+                                       "sunday"
+                                    ]
+                                 }
+                              }
+                           },
+                           "additionalProperties": false,
+                           "required": [
+                              "id",
+                              "name",
+                              "repeatDays",
+                              "trackingStartDate",
+                              "created",
+                              "lastUpdated",
+                              "description",
+                              "category"
+                           ]
+                        }
+                     }
+                  }
+               }
+            }
          }
       },
       "/api/habits/{habitId}": {
